--- a/英语/常用单词.md
+++ b/英语/常用单词.md
@@ -5,4 +5,40 @@
 3. **machine -- 机器**
 4. **vision -- 视觉**
 5. mutable -- 可变的
-6. 
+## 二、电子工程师常用单词
+6. debug --- 调试
+7. file --- 文件
+8. edit --- 编辑、文本编辑
+9. meta --- 变换，标签的优化；元标签
+10. title --- 标题；题目，头衔
+11. content --- 内容，网上信息，电子信息；满足的，满意的，甘愿的
+12. printf --- 打印输出、格式输出
+13. scanf --- 输入函数、输入
+14. theme --- 主题，题目；内容，主旋律
+15. equiv --- 期限，当量
+16. int --- 整数，整型，中断，线
+17. factorial --- 阶乘
+18. function --- 函数，功能，作用；官能团 ，官能团，典礼
+19. fact --- 事实，全自动校准技术 
+20. void --- 空间，空白的，空虚的，空虚感，空洞，无效的，空白，失落感
+21. stdio --- 头文件，标准输入输出
+22. include --- 包含，把···列为一部分，文件，包括
+23. main --- 主要的，最大的，主函数
+24. call --- 给···取名；称呼；把···唤作，呼叫，调用，执行子程序的命令
+25. variable --- 变数，变量，可变的，可变量，易变的，多变的，变量的
+26. arguments --- 参数，命令行参数，对象
+27. argument --- 争论，争吵，论据；理由，逻辑论证，幅角
+28 .loop --- 环形，环状，环状物，循环胶片，循环，回路，环路
+30. statement --- 声明，报名，说明，表态语句，说法
+31. input --- 投入；输入
+32. output --- 输出
+
+
+
+## 三、编程语言
+1. HTML --- 超文本标记语言
+2. HTTP --- 超文本传输协议
+3. version --- 版本，样本，样式，描述
+4. data --- 数据，资料，数据区
+5. temp --- 临时文件夹，水温表
+6. script --- 脚本，剧本，手稿；手写体，连体字，草书，字体
